@@ -1,3 +1,12 @@
+2015-02-27  Hunseop Jeong  <hs85.jeong@samsung.com>
+
+        [EFL][GTK] Fix build break after r180790,180798 
+        https://bugs.webkit.org/show_bug.cgi?id=142127
+
+        Reviewed by Gyuyoung Kim.
+
+        * CMakeLists.txt:
+
 2015-02-27  Chris Dumez  <cdumez@apple.com>
 
         [WK2] Drop legacy WKBundlePageDiagnosticLoggingClient API
